--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact</title>
-     <style>
+    <style>
       body {
         text-align: center;
       }
@@ -13,7 +13,8 @@
   <body>
     <h1>Contact Us</h1>
     <p>
-      To contact croissant.com, please email us at <a href"emailto:hello@croissant.com">hello@croissant.com</a> for more
+      To contact croissant.com, please email us at
+      <a href="emailto:hello@croissant.com">hello@croissant.com</a> for more
       info
     </p>
     <a href="index.html">Homepage</a>
