--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact</title>
+    <title>Contact page - Croissant</title>
+    <meta name="description" content="Contact page for croissant.com" />
     <style>
       body {
         text-align: center;
@@ -17,8 +18,8 @@
       <a href="emailto:hello@croissant.com">hello@croissant.com</a> for more
       info
     </p>
-    <a href="index.html">Homepage</a>
-    <a href="photo.html">Photo</a>
-    <a href="contact.html">Contact</a>
+    <a href="index.html" title="Homepage">Homepage</a>
+    <a href="photo.html" title="photo of croissant">Photo</a>
+    <a href="contact.html" title="Contact page">Contact</a>
   </body>
 </html>
