--- a/photo.html
+++ b/photo.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Photo</title>
+    <title>Photo of a croissant - Croissant</title>
+        <meta name="description" content="Photo of a croissant from Croissant.com" />
      <style>
       body {
         text-align: center;
@@ -12,10 +13,10 @@
   </head>
   <body>
     <h1>A picture of a croissant</h1>
-    <img src="../src/croissant.jpg" />
+    <img src="../src/croissant.jpg" alt="Croissant"/>
   </br>
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/index.html" title="Homepage">Homepage</a>
+    <a href="/photo.html" title="Croissant photo">Photo</a>
+    <a href="/contact.html" title="Contact page">Contact</a>
   </body>
 </html>
