--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Homepage for Croissant - Croissant</title>
+    <meta
+      name="description"
+      content="Homepage for Croissant.com and history of the croissant"
+    />
     <style>
       body {
         text-align: center;
@@ -17,8 +21,8 @@
       named for its historical crescent shape. Croissants and other viennoiserie
       are made of a layered yeast-leavened dough
     </p>
-    <a href="/index.html">Homepage</a>
-    <a href="../photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <a href="/index.html" title="Homepage">Homepage</a>
+    <a href="../photo.html" title="Photo of croissant">Photo</a>
+    <a href="/contact.html" title="Contact page">Contact</a>
   </body>
 </html>
